@@ -475,6 +475,8 @@ int main(int argc, char **argv)
 					Mk5Daemon_getStreamstorVersions(D);
 					logStreamstorVersions(D);
 					Mk5Daemon_getModules(D);
+					logMk5Smart(D, BANK_A);
+					logMk5Smart(D, BANK_B);
 				}
 				justStarted = 0;
 			}
